# SmartCalculator

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  LICENSE  Lexer.h  MainWindow.h  Parser.h  README.md
